update openresty nginx conf

--- a/services/openresty/conf.d/localhost.conf
+++ b/services/openresty/conf.d/localhost.conf
@@ -32,6 +32,22 @@ server {
         include        fastcgi_params;
     }
 
+    # laravel conf
+    # location / {
+    #     try_files $uri $uri/ /index.php?$query_string;
+    # }
+
+    # location ~ [^/]\.php(/|$) {
+    #     fastcgi_pass   php:9000;
+    #     include        fastcgi_params;
+    #     fastcgi_split_path_info  ^((?U).+\.php)(/?.+)$;
+    #     fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+    #     fastcgi_param  PATH_INFO  $fastcgi_path_info;
+    #     fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
+    #     include        fastcgi-php.conf;
+        
+    # }
+
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
